# realtime-screen-broadcaster

./: .gitignore  README.md  Setup_Guide.md  screen-broadcaster-workspace.code-workspace  server.crt  server.csr  server.key
producer/: CMakeLists.txt  CmakeLists.txt
producer/common/: CmakeLists.txt
producer/common/include/utils/: encryption.hpp  file.hpp  log.hpp  utils.hpp  win32_strings.hpp  win32_symbols.hpp
producer/common/src/utils/: encryption.cpp  file.cpp  log.cpp  utils.cpp
producer/dropper/: CmakeLists.txt
producer/dropper/src/: main.cpp
producer/recorder/: CMakeLists.txt  CmakeLists.txt  config.ini
producer/recorder/include/: app.hpp  capture.hpp  cursor.hpp  ffmpeg_pipe.hpp  usb_watcher.hpp  ws_client.hpp
producer/recorder/src/: app.cpp  capture.cpp  cursor.cpp  ffmpeg_pipe.cpp  main.cpp  usb_watcher.cpp  ws_client.cpp
server/: app.py
server/static/css/: styles.css
server/static/js/: script.js
server/templates/: index.html  login.html
