cmake_minimum_required (VERSION 3.30)
project (screen-broadcaster VERSION 0.1.0 LANGUAGES CXX)

set (BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)

set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)

set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

set (SB_VERSION_MAJOR ${PROJECT_VERSION_MAJOR} CACHE INTERNAL "")
set (SB_VERSION_MINOR ${PROJECT_VERSION_MINOR} CACHE INTERNAL "")
set (SB_VERSION_PATCH ${PROJECT_VERSION_PATCH} CACHE INTERNAL "")

set (ENABLE_ACL     OFF CACHE BOOL "" FORCE)
set (ENABLE_TAR     OFF CACHE BOOL "" FORCE)
set (ENABLE_CAT     OFF CACHE BOOL "" FORCE)
set (ENABLE_LZMA    ON  CACHE BOOL "" FORCE)
set (ENABLE_CPIO    OFF CACHE BOOL "" FORCE)
set (ENABLE_TEST    OFF CACHE BOOL "" FORCE)
set (ENABLE_XATTR   OFF CACHE BOOL "" FORCE)
set (ENABLE_ICONV   OFF CACHE BOOL "" FORCE)
set (ENABLE_OPENSSL ON  CACHE BOOL "" FORCE)

set (LIBARCHIVE_INSTALL OFF CACHE BOOL "" FORCE)

set (ZSTD_USE_STATIC_LIBS    ON)
set (ZLIB_USE_STATIC_LIBS    ON)
set (EXPAT_USE_STATIC_LIBS   ON)
set (BZip2_USE_STATIC_LIBS   ON)
set (LibLZMA_USE_STATIC_LIBS ON)
set (OPENSSL_USE_STATIC_LIBS ON)

set(_old_suffixes "${CMAKE_FIND_LIBRARY_SUFFIXES}")
set(CMAKE_FIND_LIBRARY_SUFFIXES ".a;.lib")

find_package(ZLIB REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(LibLZMA REQUIRED)

option (LOG_ENABLED "Enables logging." ON)
option (LOG_ATTACH_CONSOLE "Enables console logging." ON)

add_subdirectory(external/libarchive)

set(CMAKE_FIND_LIBRARY_SUFFIXES "${_old_suffixes}")
unset(_old_suffixes)

add_subdirectory(common)
add_subdirectory(dropper)
add_subdirectory(recorder)